type error solve and live

--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 # API Base URL - Production server
-VITE_BASE_URL=https://xgsm.itfuturz.in
+VITE_BASE_URL=https://demo-xgsm.itfuturz.in
 
 # Route Prefixes
 VITE_USER_ROUTE=web
