--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.8.2",
     "react-select": "^5.10.2",
